--- a/download.html
+++ b/download.html
@@ -21,43 +21,43 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.2.1.1/xowa_app_windows_64_v3.2.1.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.4.1/xowa_app_windows_64_v3.3.4.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.2.1.1/xowa_app_windows_v3.2.1.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.4.1/xowa_app_windows_v3.3.4.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Linux'> Linux </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.2.1.1/xowa_app_linux_64_v3.2.1.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.4.1/xowa_app_linux_64_v3.3.4.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.2.1.1/xowa_app_linux_v3.2.1.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.4.1/xowa_app_linux_v3.3.4.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.2.1.1/xowa_app_macosx_64_v3.2.1.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.4.1/xowa_app_macosx_64_v3.3.4.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.2.1.1/xowa_app_macosx_v3.2.1.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.4.1/xowa_app_macosx_v3.3.4.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='RaspberryPi'> Raspberry Pi </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.2.1.1/xowa_app_arm_v3.2.1.1.zip" class="external text" rel="nofollow">Raspberry Pi</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.4.1/xowa_app_arm_v3.3.4.1.zip" class="external text" rel="nofollow">Raspberry Pi</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Android'> Android </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.2.1/xowa_app_android_v3.3.2.1.apk" class="external text" rel="nofollow">Android</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.4.1/xowa_app_android_v3.3.4.1.apk" class="external text" rel="nofollow">Android</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Source'> Source code </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/archive/v3.2.1.1.zip" class="external text" rel="nofollow">Source code</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/archive/v3.3.4.1.zip" class="external text" rel="nofollow">Source code</a>
   </li>
 </ul>
 
@@ -68,79 +68,195 @@
 </ul>
 <br/>
     <h2>
-      <span class="mw-headline" id="v3.2.1.1_.282016-01-31.29">v3.2.1.1 (2016-01-31)</span>
+      <span class="mw-headline" id="v3.3.4.1_.282016-03-27.29">v3.3.4.1 (2016-03-27)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Windows_.2F_Linux_.2F_Mac_OS_X">Windows / Linux / Mac OS X</span>
+    </h3>
+    <p>
+      <b>major.add</b>
+    </p>
+    <ul>
+      <li>
+        Search: Add autocomplete to url bar.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/wiki/App/Search/Address_bar" id="xolnki_11" title="App/Search/Address bar" class="xowa-visited">App/Search/Address_bar</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Search: Improve performance of searches.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Search: Assign numeric score to pages using PageRank.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/wiki/Options/Search" id="xolnki_12" title="Options/Search" class="xowa-visited">Options/Search</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Search: Handle titles with punctuation like "GNU/Linux", "o'clock", "Faster-than-light", "History of U.S.A. Science", "20,000_Leagues_Under_the_Sea" etc..
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Search: Improve boolean searches.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/wiki/App/Search/Overview" id="xolnki_13" title="App/Search/Overview" class="xowa-visited">App/Search/Overview</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Doc: Add search capabilities to the home wiki.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Upgrade home wiki to new search system.
+      </dd>
+    </dl>
+    <p>
+      <br>
+      <b>minor.fix</b>
+    </p>
+    <ul>
+      <li>
+        Scribunto: Fix script error on English Wikipedia category pages. Message: <code>Script error: =Module:progress box:59 attempt to index ? (a number value)</code>
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Support "*" for Scribunto "pagesInCategory".
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikipedia.org/wiki/Category:Articles_lacking_sources_from_February_2009">https://en.wikipedia.org/wiki/Category:Articles_lacking_sources_from_February_2009</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Wikibase: Add hyperlinks to taxonomy navbar for about a few hundred en.w pages.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Support "from" atribute in "{{#property}}". Example: {{#property:p1|from=p2}}.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikipedia.org/wiki/Golden_eagle">https://en.wikipedia.org/wiki/Golden_eagle</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        UI: Allow keybindings for all punctuation symbols.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Assign keycodes based on SWT const values.
+      </dd>
+    </dl>
+    <p>
+      <br>
+      <b>minor.add</b>
+    </p>
+    <ul>
+      <li>
+        Database: Minor performance improvements.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Upgrade sqlite-jdbc to 3.8.2.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Setup: Always list correct version number in windows.exe files. {detected by anonymous}
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Extension.NewWindowLink: Handle {{#NewWindowLink}} for wikia wikis. {requested by anonymous}
+      </li>
+    </ul>
+    <p>
+      <br>
+      <b>trivial.add</b>
+    </p>
+    <ul>
+      <li>
+        Wikibase: Add "adywiki" to list of known wikis.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Wiki: Change site_stats from int to long.
+      </li>
+    </ul>
+    <p>
+      <br>
+    </p>
+    <h3>
+      <span class="mw-headline" id="Android">Android</span>
     </h3>
     <p>
       <b>major.fix</b>
     </p>
     <ul>
       <li>
-        Search: Fix search not working. [broken since: v3.1.1.1]
+        Search: Improve performance and accuracy of searches.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Assign correct word ids to search word.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikipedia.org/wiki/Special:Search?search=Earth&amp;fulltext=y">https://en.wikipedia.org/wiki/Special:Search?search=Earth&amp;fulltext=y</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Remove unnecessary level of threading.
       </dd>
     </dl>
     <ul>
       <li>
-        Html: Fix English Wiktionary sections defaulting to collapsed but showing "hide". [broken since: v3.1.5.1]
+        Javascript: Fix table collapse / expand buttons not working.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Change mediawiki.gadget.navframe.js to explicitly set style.display.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/green">https://en.wiktionary.org/wiki/green</a>
-      </dd>
-    </dl>
-    <p>
-      <b>major.add</b>
-    </p>
-    <ul>
-      <li>
-        Build: Build application package for Raspberry Pi. {contributed by yonisolo}
-      </li>
-    </ul>
-    <p>
-      <b>package</b>
-    </p>
-    <ul>
-      <li>
-        Package: Release English Wikipedia (2016-01).
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://archive.org/details/Xowa_enwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_enwiki_latest</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Change javascript to call tableFull.setAttribute("style", 'display:none !important');.
       </dd>
     </dl>
     <ul>
       <li>
-        Package: Release English Wikis (2016-01).
+        Search: Allow search for apostrophe words. {detected by anonymous4}
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://archive.org/details/Xowa_enwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_enwiki_latest</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Search using prepared statements, not dynamic SQL. Example: search for "o'clock".
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Search: Allow search for "and", "or".
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Change boolean AND operator to be "+" and OR operator to be ",".
       </dd>
     </dl>
     <p>
-      <b>doc</b>
+      <br>
     </p>
-    <ul>
-      <li>
-        Doc: Modify "Change log" entries to be more user-oriented.
-      </li>
-    </ul>
+
     
 <!-- page_end -->
     </div>
