--- a/image_dbs.html
+++ b/image_dbs.html
@@ -119,17 +119,17 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-12-06
+            2016-03-05
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-12-24
+            2016-03-20
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
@@ -143,13 +143,42 @@
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_core.7z" rel="nofollow" class="external text">wiki.core</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_text_ns-000_part-1.7z" rel="nofollow" class="external text">wiki.main articles.part-1</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_text_ns-000_part-2.7z" rel="nofollow" class="external text">wiki.main articles.part-2</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_text_ns-100.7z" rel="nofollow" class="external text">wiki.other articles</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_xtn_search.7z" rel="nofollow" class="external text">wiki.search</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_xtn_category.7z" rel="nofollow" class="external text">wiki.category</a>
+            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-03-05
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-03-20
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            15 - 30<sup id="cite_ref-pkg_enwiki_6-1" class="reference"><a href="#cite_note-pkg_enwiki-6">[7]</a></sup>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_wiki_core.7z" rel="nofollow" class="external text">wiki.core</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_wiki_text_ns-000_part-1.7z" rel="nofollow" class="external text">wiki.main articles.part-1</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_wiki_text_ns-000_part-2.7z" rel="nofollow" class="external text">wiki.main articles.part-2</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_wiki_text_ns-100.7z" rel="nofollow" class="external text">wiki.other articles</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_wiki_xtn_search.7z" rel="nofollow" class="external text">wiki.search</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_wiki_xtn_category.7z" rel="nofollow" class="external text">wiki.category</a>
           </p>
         </td>
       </tr>
@@ -457,6 +486,38 @@
         <td style='color:black; vertical-align:top;'>
           <p>
             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-02-03_file_v2b.7z" rel="nofollow" class="external text">images.update.2016-02-03.v2b (.xowa)</a>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-03-05
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-03-20
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            5.2
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa (v2b)
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_file_v2b.7z" rel="nofollow" class="external text">images.update.2016-03-05.v2b (.xowa)</a>
           </p>
         </td>
       </tr>
