--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,15 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_NONE_.282016-04-03_22:00_Sun.29">Release: NONE (2016-04-03 22:00 Sun)</span>
+    </h2>
+    <p>
+      Sory all. I'm postponing the release for tomorrow night. I'll post again tomorrow evening. Thanks.
+    </p>
+    <p>
+      <br>
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_v3.3.4.1_.282016-03-27_19:30_Sun.29">Release: v3.3.4.1 (2016-03-27 19:30 Sun)</span>
     </h2>
     <p>
