--- a/image_dbs.html
+++ b/image_dbs.html
@@ -894,17 +894,17 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://fr.wikipedia.org/wiki/">https://fr.wikipedia.org</a>
+            <a href="/site/fr.wikipedia.org/wiki/">https://fr.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-11-02
+            2016-03-05
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-11-22
+            2016-04-04
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
@@ -919,13 +919,45 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_text.7z" rel="nofollow" class="external text">wiki</a><br>
+            <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2016-03-05_text.7z" rel="nofollow" class="external text">wiki</a><br>
              <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_core.7z" rel="nofollow" class="external text">images.core</a><br>
              <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-000_part-1.7z" rel="nofollow" class="external text">images.main.part-1</a><br>
              <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-000_part-2.7z" rel="nofollow" class="external text">images.main.part-2</a><br>
              <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-000_part-3.7z" rel="nofollow" class="external text">images.main.part-3</a><br>
              <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-000_part-4.7z" rel="nofollow" class="external text">images.main.part-4</a><br>
              <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-100.7z" rel="nofollow" class="external text">images.other</a>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="/site/fr.wikipedia.org/wiki/">https://fr.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-03-05
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-04-04
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            4
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2016-03-05_file_update.7z" rel="nofollow" class="external text">images.update.2016-03-05</a>
           </p>
         </td>
       </tr>
