--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-04-04</b> French Wikipedia 2016-03 update released<br/>
+  <ul>
+    <li> <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2016-03-05_file_update.7z" class="external text" rel="nofollow">French Wikipedia update</a>
+    </li>
+  </ul>
+
   <b>2016-03-20</b> English Wikipedia 2016-03 update released<br/>
   <ul>
     <li> <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_file_v2b.7z" class="external text" rel="nofollow">English Wikipedia update</a>
