--- a/download.html
+++ b/download.html
@@ -23,43 +23,43 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.1.1/xowa_app_windows_64_v3.4.1.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_windows_64_v3.4.2.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.1.1/xowa_app_windows_v3.4.1.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_windows_v3.4.2.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Linux'> Linux </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.1.1/xowa_app_linux_64_v3.4.1.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_linux_64_v3.4.2.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.1.1/xowa_app_linux_v3.4.1.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_linux_v3.4.2.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.1.1/xowa_app_macosx_64_v3.4.1.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_macosx_64_v3.4.2.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.1.1/xowa_app_macosx_v3.4.1.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_macosx_v3.4.2.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='RaspberryPi'> Raspberry Pi </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.1.1/xowa_app_arm_v3.4.1.1.zip" class="external text" rel="nofollow">Raspberry Pi</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_arm_v3.4.2.1.zip" class="external text" rel="nofollow">Raspberry Pi</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Android'> Android </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.3.4.1/xowa_app_android_v3.3.4.1.apk" class="external text" rel="nofollow">Android</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_android_v3.4.2.1.apk" class="external text" rel="nofollow">Android</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Source'> Source code </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/archive/v3.4.1.1.zip" class="external text" rel="nofollow">Source code</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/archive/v3.4.2.1.zip" class="external text" rel="nofollow">Source code</a>
   </li>
 </ul>
 
@@ -70,7 +70,7 @@
 </ul>
 <br/>
     <h2>
-      <span class="mw-headline" id="v3.4.1.1_.282016-04-04.29">v3.4.1.1 (2016-04-04)</span>
+      <span class="mw-headline" id="v3.4.2.1_.282016-04-10.29">v3.4.2.1 (2016-04-10)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Windows_.2F_Linux_.2F_Mac_OS_X">Windows / Linux / Mac OS X</span>
@@ -80,61 +80,98 @@
     </p>
     <ul>
       <li>
-        Import: Fix offline import for large wikis. {detected by anonymous}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/wiki/Dashboard/Import/Offline" id="xolnki_13" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Database: Open old .sqlite3 wikis. {detected by William}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Parse SQL comments in SQL master.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Import: Allow upgrade of search for old .sqlite3 wikis. {detected by William}
+        Search: Reduce build time for search databases. {detected by William}
       </li>
     </ul>
     <p>
       <br>
+      <b>major.package</b>
+    </p>
+    <ul>
+      <li>
+        Package: Upload consolidated images for English Wikipedia.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://archive.org/details/Xowa_enwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_enwiki_latest</a>
+      </dd>
+    </dl>
+    <p>
+      <br>
+      <b>minor.add</b>
+    </p>
+    <ul>
+      <li>
+        CSS: Update home CSS files to latest version from English Wikipedia. {detected by William}
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Parser: Add parser for RandomSelection tag. {requested by anonymous} Example: &lt;choose&gt;&lt;option&gt;A&lt;/option&gt;&lt;option&gt;B&lt;/option&gt;&lt;/choose&gt;.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: [[Diagnostics/Xtns/Wikia/All]]
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Parser: Add parser for Tabber tag. {requested by anonymous} Example: &lt;tabber&gt;tab1=A|-|tab2=B&lt;/tabber&gt;.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: [[Diagnostics/Xtns/Wikia/All]]
+      </dd>
+    </dl>
+    <p>
+      <br>
+    </p>
+    <h3>
+      <span class="mw-headline" id="Android">Android</span>
+    </h3>
+    <p>
       <b>major.add</b>
     </p>
     <ul>
       <li>
-        Files: Add page to delete old unused images.
+        UI: Add "Import New Wikis" page. {assisted by anonymous4}
       </li>
     </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/wiki/Dashboard/Files/Deletion" id="xolnki_14" title="Dashboard/Files/Deletion" class="xowa-visited">Dashboard/Files/Deletion</a>
-      </dd>
-    </dl>
+    <ul>
+      <li>
+        UI: Add "Wikis" list page.
+      </li>
+    </ul>
     <p>
       <br>
-      <b>package</b>
+      <b>minor.fix</b>
     </p>
     <ul>
       <li>
-        Package: Release French Wikipedia 2016-03.
+        UI: Do not crash when pressing Random in home wiki. {detected by anonymous4}
       </li>
     </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://archive.org/details/Xowa_frwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_frwiki_latest</a>
-      </dd>
-    </dl>
+    <ul>
+      <li>
+        UI: Do not crash when pressing XOWA after History.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        UI: Remove "Nearby" pages.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        UI: Remove "Log in to Wikipedia".
+      </li>
+    </ul>
     <p>
       <br>
     </p>
-
     
 <!-- page_end -->
     </div>
